2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	coverage: test mixed C/C++ yacc-generated parsers in the same dir
	* tests/yacc-mix-c-cxx.test: New test.
	* tests/Makefile.am (TESTS): Update.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	cosmetics: fix typos and wording in some yacc tests
	* tests/yacc-cxx.test (foo.cc): Clarify comment about the content
	of this file being valid C++ but invalid C.
	(parse1.yy): Likewise.  Also, remove redundant parentheses in a
	`return' statement.
	* tests/yacc-d-cxx.test (write_parse): Clarify comment about the
	content of the generated files being valid C++ but invalid C.
	(write_main): Likewise.
	* tests/yacc-basic.test: Remove redundant parentheses in a
	`return' statement.
	* tests/yacc-d-vpath.test: Adjust spacing around curly brackets.
	* tests/yaccvpath.test: Likewise.
	* tests/yaccdry.test: Likewise.
	* tests/yacc8.test: Likewise.
	* tests/yacc4.test: Likewise.
	Suggested by Ralf Wildenhues.

2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: update NEWS and docs about yacc-generated headers extensions
	* doc/automake.texi (Yacc and Lex): Document explicitly that
	extensions of yacc-generated headers are modelled after the
	extension of the corresponding sources.
	* NEWS: Update.

2011-01-28   Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc: extension of headers modelled after extension of sources
	With this change, if '-d' is in *YFLAGS, a yacc input file named
	foo.y++ will cause a foo.h++ header to be generated, instead of a
	foo.h header.  Similarly for foo.ypp, foo.yxx and foo.yy.
	This way, the name of the files generated by an automake-created
	`ylwrap' invocation should be consistent with those generated by
	a `bison -o' call.
	Related to automake bug#7648 and PR automake/491.
	* lib/am/yacc.am (am__yacc_c2h): New internal variable.
	(?GENERIC?%EXT%%DERIVED-EXT%, ?!GENERIC?%OBJ%): Get the name of