@@ -1,3 +1,14 @@
+2011-04-11  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: split yacc6.test, for better separation and coverage
+	* tests/yacc6.test: Test removed, its content extended and split
+	into ...
+	* tests/yacc-auxdir.test, tests/yacc-depend.test,
+	tests/yacc-line.test: ... these new tests.
+	* tests/yacc-depend2.test: New test, exposes the failure that
+	FreeBSD used to encounter in yacc6.test.
+	* tests/Makefile.am (TESTS): Update.
+
 2011-04-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	coverage: test mixed C/C++ yacc-generated parsers in the same dir
